# sage

./: .gitignore  Cargo.toml  Distro.toml  POLICY-AUTHORITY.md  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
astrid-plugin/: .mcp.json  README.md  settings.json
astrid-plugin/.claude-plugin/: plugin.json
astrid-plugin/commands/: capsules.md  doctor.md  hud.md  status.md  whoami.md
astrid-plugin/hooks/: hooks.json
astrid-plugin/output-styles/: astrid.md
astrid-plugin/skills/forge/: SKILL.md
crates/sage/: Capsule.toml  Cargo.toml
crates/sage-completion/: Capsule.toml  Cargo.toml
crates/sage-completion/src/: anthropic.rs  lib.rs  schemas.rs  sse.rs
crates/sage-install/: Capsule.toml  Cargo.toml
crates/sage-install/src/: atomic.rs  claude_md.rs  config.rs  layout.rs  lib.rs  settings.rs
crates/sage-mcp/: Capsule.toml  Cargo.toml
crates/sage-mcp/src/: approval.rs  broker.rs  cache.rs  discovery.rs  execute.rs  hook_gate.rs  lib.rs  policy.rs
crates/sage-mcp/wit/: broker.wit
crates/sage/src/: codec.rs  config.rs  hooks.rs  hooks_tests.rs  identity.rs  install.rs  lib.rs  lib_tests.rs  settings.rs  shutdown.rs  spawn.rs  state.rs  supervisor.rs
crates/sage/src/tooling/: approval.rs  encode.rs  meta.rs  mod.rs  result.rs
