[package]
name = "sage-completion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Anthropic API LLM provider for Astrid OS (rfc:llm-provider.v1)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
