[package]
name = "sage-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP server bridging Astrid capsule IPC to MCP wire protocol"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
